--- a/books/aws-cdk-documentation-jp/config.yaml
+++ b/books/aws-cdk-documentation-jp/config.yaml
@@ -1,5 +1,5 @@
-title: "AWS CDK ドキュメント(翻訳メモ)"
-summary: "AWS CDK ドキュメントの個人用翻訳メモ。最新を追従したりはしないつもりです。"
+title: "AWS CDK ドキュメント(和訳メモ)"
+summary: "AWS CDK ドキュメントの個人用メモ。最新を追従したりはしないつもりです。"
 topics: [awscdk]
 published: true
 price: 0
